// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > it works with level 1`] = `
<span
  class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_68e16a _level-primary_68e16a"
  data-testid="Tag"
>
  <div
    class="_this_6f2e26 _elevation-small_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-medium_6f2e26 _gutterY-small_6f2e26 _children_68e16a"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;

exports[`Tag > it works with level 2`] = `
<span
  class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_68e16a _level-secondary_68e16a"
  data-testid="Tag"
>
  <div
    class="_this_6f2e26 _elevation-small_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-medium_6f2e26 _gutterY-small_6f2e26 _children_68e16a"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;

exports[`Tag > it works with level 3`] = `
<span
  class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_68e16a _level-tertiary_68e16a"
  data-testid="Tag"
>
  <div
    class="_this_6f2e26 _elevation-small_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-medium_6f2e26 _gutterY-small_6f2e26 _children_68e16a"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;

exports[`Tag > it works with level 4`] = `
<span
  class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_68e16a _level-danger_68e16a"
  data-testid="Tag"
>
  <div
    class="_this_6f2e26 _elevation-small_6f2e26 _roundness-none_6f2e26 _gutter-none_6f2e26 _gutterX-medium_6f2e26 _gutterY-small_6f2e26 _children_68e16a"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;
